src/objects/BMCServiceDesk__FAQ_Category__c.object
<CustomObject>
    <description>This object allows you to store data for FAQs categories.</description>
    <fields>
        <fullName>BMCServiceDesk__Description__c</fullName>
        <inlineHelpText>Use this field to enter a description of the FAQ category.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FAQ_Category_Name__c</fullName>
        <inlineHelpText>Use this field to enter the name of the FAQ category.</inlineHelpText>
        <label>FAQ Category</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if this record is no longer valid, but the record has to be retained for compliance with the records retention policy.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <label>FAQ Category</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__Description__c</columns>
        <columns>BMCServiceDesk__Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>FAQ Category Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAQ Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__FAQ_Category_Name_Required_Rule</fullName>
        <active>true</active>
        <description>checking wheather FAQ Category Name is null</description>
        <errorConditionFormula>OR( ISNULL(BMCServiceDesk__FAQ_Category_Name__c) , ISBLANK(BMCServiceDesk__FAQ_Category_Name__c))</errorConditionFormula>
        <errorMessage>Please enter FAQ Category.</errorMessage>
    </validationRules>
</CustomObject>